<resources>
    <string name="app_name">CAMPanion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Log_In">Log In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Enter_Username">Enter Your Username Here</string>
    <string name="Enter_Password">Enter Your Password Here</string>
    <string name="Match_Password">Reenter Your Password Here</string>
    <string name="verify_email">Verify Email</string>
    <string name="verify_code">Verify Code</string>
    <string name="submit">Submit</string>
    <string name="choice_key">choice key</string>
    <string name="login_key">login key</string>
    <string name="signup_key">signup key</string>
</resources>
