<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group4.tcss450.uw.edu.campanion.SignupFragment"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/acceptSignupButton"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/Sign_Up"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="407dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.85" />

    <TextView
        android:id="@+id/selectUsername"
        android:layout_width="256dp"
        android:layout_height="26dp"
        android:text="@string/Enter_Username"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/selectPassword"
        android:layout_width="256dp"
        android:layout_height="26dp"
        android:text="@string/Enter_Password"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="189dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/matchPassword"
        android:layout_width="256dp"
        android:layout_height="26dp"
        android:text="@string/Match_Password"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="278dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/matchAPassword"
        android:layout_width="255dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="315dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/selectAPassword"
        android:layout_width="255dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="225dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/selectAnEmail"
        android:layout_width="255dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="137dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>

