<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group4.tcss450.uw.edu.campanion.LoginFragment">

    <!-- TODO: Update blank fragment layout -->


    <EditText
        android:id="@+id/loginEdit"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="230dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/paswordEdit"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginLeft="24dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="340dp" />

    <Button
        android:id="@+id/acceptLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/Log_In"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@+id/paswordEdit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="67dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.514" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter_Password"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/paswordEdit"
        app:layout_constraintTop_toBottomOf="@+id/loginEdit" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="164dp"
        android:layout_height="17dp"
        android:text="@string/Enter_Username"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/loginEdit"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.52" />

</android.support.constraint.ConstraintLayout>

